--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "start": "react-scripts start",
     "startnode": "node nodeserver/index.js",
     "startphp":"php -S localhost:8080 index.php",
-    "startreacr":"react-scripts start",
+    "startreact":"react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
