--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "amqplib": "^0.5.1",
     "express": "^4.15.5",
     "material-ui": "^0.19.2",
-    "prop-types": "^15.5.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "prop-types": "^15.6.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.13",
@@ -39,9 +39,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "startnode": "node nodeserver/index.js",
-    "startphp":"php -S localhost:8080 index.php",
-    "startreact":"react-scripts start",
+    "startnode": "node nodeserver/indexrb.js",
+    "startphp": "php -S localhost:8080 index.php",
+    "startreact": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
