--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "scripts": {
     "start": "react-scripts start",
     "startnode": "node nodeserver/indexrb.js",
-    "startphp": "php -S localhost:8080 index.php",
+    "startphp": "php -S 127.0.0.1:8080 index.php",
     "startreact": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
