--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "amqplib": "^0.5.1",
     "express": "^4.15.5",
     "material-ui": "^0.19.2",
+    "mongodb": "^2.2.31",
     "prop-types": "^15.6.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
@@ -23,27 +24,31 @@
     "styled-components": "^2.0.0"
   },
   "devDependencies": {
-    "node-plop": "^0.5.5",
-    "plop": "^1.7.4",
-    "eslint-config-prettier": "^2.5.0",
-    "lint-staged": "^4.2.1",
-    "prettier": "^1.7.0",
-    "husky": "^0.14.3",
-    "eslint": "^4.7.0",
     "babel-eslint": "^8.0.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "eslint": "^4.7.0",
     "eslint-config-airbnb": "^15.1.0",
+    "eslint-config-prettier": "^2.5.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-prettier": "^2.2.0",
     "eslint-plugin-react": "^7.3.0",
-    "eslint-plugin-prettier": "^2.2.0"
+    "husky": "^0.14.3",
+    "lint-staged": "^4.2.1",
+    "node-plop": "^0.5.5",
+    "plop": "^1.7.4",
+    "prettier": "^1.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "startnode": "node nodeserver/indexrb.js",
+    "startnode": "node nodeserver/index.js",
     "startphp": "php -S 127.0.0.1:8080 index.php",
     "startreact": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "testr": "react-scripts test --env=jsdom",
+    "test": "mocha tests",
+    "doc": "jsdoc -d doc nodeserver",
     "eject": "react-scripts eject",
     "prettier": "prettier --single-quote --print-width=120 --trailing-comma es5 --no-semi",
     "format": "npm run prettier -- --write '{,!(build|generators)/**/}*.js'",
