--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
     "require": {
         "php":">=5.3.0",
 
-        "php-amqplib/php-amqplib": ">=2.6.1",
-        "phpdocumentor/phpdocumentor": "2.*"
+        "php-amqplib/php-amqplib": ">=2.6.1"
 
 }
 }
