--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-prettier": "^2.2.0",
     "eslint-plugin-react": "^7.3.0",
+    "react-test-renderer":"15.6.2",
     "husky": "^0.14.3",
     "lint-staged": "^4.2.1",
     "node-plop": "^0.5.5",
